--- a/.env
+++ b/.env
@@ -2,8 +2,6 @@ SESSION_KEY = "dsgjdnhienboe"
 NODEMAILER_EMAIL = "szuccibag@gmail.com"
 NODEMAILER_PASSWORD="fiai hijn gamt gowe"
 
-# CLIENT_ID = "48841550412-9ujuisqm28iaa7gppk3bfahamaam8tnq.apps.googleusercontent.com"
 
-# CLIENT_SECRET = "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"
-
-# CLIENT_URL = http://localhost:3000/
+RazorPay_KEY_ID = "rzp_test_iqxC6hlqYjWODY"
+RazorPay_SECRET = "uGuAYmFQF1kNFjCII2rLSMvU"
