--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.2",
     "router": "^1.3.8",
     "uuid": "^9.0.1"
   },
