--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap-icons": "^1.11.3",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -18,7 +19,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "razorpay": "^2.9.2",
+    "razorpay": "^2.9.3",
     "router": "^1.3.8",
     "uuid": "^9.0.1"
   },
