--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.2",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
