--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@cropper/element-canvas": "^2.0.0-beta.5",
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "cropperjs": "^2.0.0-beta.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
@@ -12,7 +14,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
-    "nocache": "^4.0.0",
+    "nocache": "^4.0.0",   
     "node": "^21.6.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
