env file changes

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+PORT = 3000
+MONGO_URI = "mongodb://susmitha0313:ALX4NsI55BMuBf31@ac-tffkba5-shard-00-00.upa4avz.mongodb.net:27017,ac-tffkba5-shard-00-01.upa4avz.mongodb.net:27017,ac-tffkba5-shard-00-02.upa4avz.mongodb.net:27017/szucci?ssl=true&replicaSet=atlas-mkrrad-shard-0&authSource=admin&retryWrites=true&w=majority"
 SESSION_KEY = "dsgjdnhienboe"
 NODEMAILER_EMAIL = "szuccibag@gmail.com"
 NODEMAILER_PASSWORD="fiai hijn gamt gowe"
